Add initial page layout and animation

--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,71 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Homepage</title>
-    </head>
-    <body>
-        
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap"
+      rel="stylesheet"
+    />
+    <title>Homepage</title>
+  </head>
+  <body>
+    <div class="header">
+      <button>HOME</button>
+      <button>ABOUT</button>
+      <button>WORK</button>
+    </div>
+
+    <div class="pin">
+      <div class="hero">
+        <div class="title">
+          <div class="heading">
+            <div class="heading-one">
+              <h1>SENIOR</h1>
+            </div>
+            <div class="heading-two">
+              <h1>EXPERIENCE</h1>
+            </div>
+            <div class="heading-three">
+              <h1>DEVELOPER</h1>
+            </div>
+          </div>
+          <div class="current">
+            <p>Currently doing something</p>
+            <p>at somewhere</p>
+          </div>
+          <div class="years">
+            <p>(2021 - Present)</p>
+          </div>
+        </div>
+        <img
+          class="picture"
+          src="https://images.pexels.com/photos/91224/pexels-photo-91224.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+        />
+      </div>
+
+      <div class="main">
+        <div class="some-txt">
+          <p class="txt-one">
+            I love making cool things and solving complex problems for people —
+            like you.
+          </p>
+          <p class="txt-two">
+            I deliver impactful results through strategic thinking and
+            data-driven insights.
+          </p>
+        </div>
+        <div class="projects">PROJECTS</div>
+      </div>
+
+      <div class="footer">
+        <p>FOOOTER</p>
+      </div>
+    </div>
+    <section style="height: 500vh">
+      <h1>Extra space just for demo, remove this</h1>
+    </section>
+  </body>
 </html>
