--- a/src/template.html
+++ b/src/template.html
@@ -13,9 +13,13 @@
   </head>
   <body>
     <div class="header">
-      <button>HOME</button>
-      <button>ABOUT</button>
-      <button>WORK</button>
+      <div class="name">
+        <p>MUHAMMAD HARIS</p>
+      </div>
+      <div class="connect">
+        <p>LET'S CONNECT</p>
+        <button>abcd@random.mail.com</button>
+      </div>
     </div>
 
     <div class="pin">
