--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="../src/styles.css" />
     <title>Homepage</title>
   </head>
   <body>
