--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <style>
+      html {
+        display: none;
+      }
+    </style>
     <title>Homepage</title>
   </head>
   <body>
